force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bangle</fullName>
            </value>
            <value>
                <fullName>Belt</fullName>
            </value>
            <value>
                <fullName>Bracelet</fullName>
            </value>
            <value>
                <fullName>Chandelier</fullName>
            </value>
            <value>
                <fullName>Choker</fullName>
            </value>
            <value>
                <fullName>Full Set</fullName>
            </value>
            <value>
                <fullName>Jada</fullName>
            </value>
            <value>
                <fullName>Kum Kum Box</fullName>
            </value>
            <value>
                <fullName>Necklace</fullName>
            </value>
            <value>
                <fullName>Nose Pin</fullName>
            </value>
            <value>
                <fullName>Nose Ring</fullName>
            </value>
            <value>
                <fullName>Pendant</fullName>
            </value>
            <value>
                <fullName>Ring</fullName>
            </value>
            <value>
                <fullName>Stud</fullName>
            </value>
            <value>
                <fullName>Tops</fullName>
            </value>
            <value>
                <fullName>Zhumka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>