force-app/main/default/objects/Product2/fields/Color_Stone__c.field-meta.xml
<CustomField>
    <fullName>Color_Stone__c</fullName>
    <label>Color Stone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blue Sapphire</fullName>
            </value>
            <value>
                <fullName>Cats Eye</fullName>
            </value>
            <value>
                <fullName>Coral</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Gomed (Garnet)</fullName>
            </value>
            <value>
                <fullName>Pearl</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Tanzanite</fullName>
            </value>
            <value>
                <fullName>Yellow Sapphire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>