force-app/main/default/objects/Product2/fields/Design_Number__c.field-meta.xml
<CustomField>
    <fullName>Design_Number__c</fullName>
    <label>Design Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>