force-app/main/default/objects/Product2/fields/Design_Style__c.field-meta.xml
<CustomField>
    <fullName>Design_Style__c</fullName>
    <label>Design Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antique</fullName>
            </value>
            <value>
                <fullName>Classic Victorian</fullName>
            </value>
            <value>
                <fullName>Closet Set</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Jadau</fullName>
            </value>
            <value>
                <fullName>Kundan</fullName>
            </value>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Nakshi</fullName>
            </value>
            <value>
                <fullName>Open Set</fullName>
            </value>
            <value>
                <fullName>Patchi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>