force-app/main/default/objects/Product2/fields/Design_Title__c.field-meta.xml
<CustomField>
    <fullName>Design_Title__c</fullName>
    <label>Design Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>