force-app/main/default/objects/Product2/fields/Dia_Wt__c.field-meta.xml
<CustomField>
    <fullName>Dia_Wt__c</fullName>
    <label>Dia Wt.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>