force-app/main/default/objects/Product2/fields/Diamond_Type__c.field-meta.xml
<CustomField>
    <fullName>Diamond_Type__c</fullName>
    <label>Diamond Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brilliant Cut</fullName>
            </value>
            <value>
                <fullName>Rose Cut</fullName>
            </value>
            <value>
                <fullName>Flat Diamond (Polki)</fullName>
            </value>
            <value>
                <fullName>Old Golkonda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>