force-app/main/default/objects/Product2/fields/Expertise_By__c.field-meta.xml
<CustomField>
    <fullName>Expertise_By__c</fullName>
    <label>Expertise By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>