force-app/main/default/objects/Product2/fields/Flat_Dia_Wt__c.field-meta.xml
<CustomField>
    <fullName>Flat_Dia_Wt__c</fullName>
    <label>Flat Dia. Wt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>