force-app/main/default/objects/Product2/fields/Gross_Wt__c.field-meta.xml
<CustomField>
    <fullName>Gross_Wt__c</fullName>
    <label>Gross Wt.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>