force-app/main/default/objects/Product2/fields/Main_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Main_Image_Id__c</fullName>
    <inlineHelpText>Paste the Id of the image that will be displayed on Catalog</inlineHelpText>
    <label>Main Image Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>