force-app/main/default/objects/Product2/fields/Multiple_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Image_Id__c</fullName>
    <inlineHelpText>Paste Ids of Images that will be displayed on Carousal</inlineHelpText>
    <label>Multiple Image Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>