force-app/main/default/objects/Product2/fields/Net_Wt__c.field-meta.xml
<CustomField>
    <fullName>Net_Wt__c</fullName>
    <label>Net Wt.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>