force-app/main/default/objects/Product2/fields/Occasion__c.field-meta.xml
<CustomField>
    <fullName>Occasion__c</fullName>
    <label>Occasion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bridal</fullName>
            </value>
            <value>
                <fullName>Festive</fullName>
            </value>
            <value>
                <fullName>Everyday Glam</fullName>
            </value>
            <value>
                <fullName>Office Wear</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>