force-app/main/default/objects/Product2/fields/Product_Catalog_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog_Image__c</fullName>
    <label>Product Catalog Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>