force-app/main/default/objects/Product2/fields/Product_Video__c.field-meta.xml
<CustomField>
    <fullName>Product_Video__c</fullName>
    <label>Product Video</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>