force-app/main/default/objects/Product2/fields/Purity__c.field-meta.xml
<CustomField>
    <fullName>Purity__c</fullName>
    <label>Purity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18K</fullName>
            </value>
            <value>
                <fullName>22k</fullName>
            </value>
            <value>
                <fullName>24K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>