force-app/main/default/objects/Product2/fields/Stone_Wt__c.field-meta.xml
<CustomField>
    <fullName>Stone_Wt__c</fullName>
    <label>Stone Wt.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>