force-app/main/default/objects/Product2/fields/Tech_Description__c.field-meta.xml
<CustomField>
    <fullName>Tech_Description__c</fullName>
    <label>Tech. Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>