force-app/main/default/objects/Product2/listViews/Products_With_Images.listView-meta.xml
<ListView>
    <fullName>Products_With_Images</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_Image_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Products With Images</label>
</ListView>